#12_backend_recommendation: Auto stash before merge of "feat/#12_backend_recommendation" and "origin/dev"
