# src/routes/recommend.routes.js
@@ -1,13 +1,16 @@
 // routes/recommend.route.js
 import express from "express";
 import asyncHandler from 'express-async-handler';
-import { get_bodyinfo_by_uuid, get_member_by_uuid, get_userfit_by_uuid, get_userstyle_by_uuid, recommend_bodyinfo_by_uuid, recommend_style_by_uuid } from "../domains/recommend/recommend.controller.js"
+import { get_bodyinfo_all, get_bodyinfo_by_uuid, get_member_by_uuid, get_userfit_by_uuid, get_userstyle_by_uuid, recommend_bodyinfo_by_uuid, recommend_style_by_uuid } from "../domains/recommend/recommend.controller.js"
 
 
 export const recommendRouter = express.Router({mergeParams: true});
 
 // 추천: id로 정보 얻기
 recommendRouter.get('/getbodyinfo/:uuid', asyncHandler(get_bodyinfo_by_uuid));
+
+// 추천: 모든 사용자 체형정보 얻기
+recommendRouter.get('/getbodyinfo/', asyncHandler(get_bodyinfo_all));
 
 // 추천: id로 정보 얻기
 recommendRouter.get('/getmember/:uuid', asyncHandler(get_member_by_uuid));
