# src/swagger/recommend.swagger.yaml
@@ -155,6 +155,85 @@ paths:
               message:
                 type: string
                 example: 서버 에러, 관리자에게 문의 바랍니다.
+  /fitple/recommend/getbodyinfo/:
+    get:
+      tags:
+        - Recommend
+      summary: 특정 사용자 체형정보
+      # parameters:
+      # - name: uuid
+      #   in: path
+      #   required: true
+      #   schema:
+      #     type: integer
+      #     example: 37
+
+      responses:
+        '200':
+          description: 불러오기 성공!
+          schema:
+            type: object
+            properties:
+              status:
+                type: integer
+                example: 200
+              isSuccess:
+                type: boolean
+                example: true
+              code:
+                type: integer
+                example: 2000
+              message:
+                type: string
+                example: "success!"
+              data:
+                type: object
+                example: {
+                    "height": 167,
+                    "weight": 71,
+                    "shoulder_width": 40,
+                    "chest_circumference": 96,
+                    "arm_length": 59,
+                    "waist_circumference": 89,
+                    "thigh_circumference": 57,
+                    "hip_circumference": 98
+                }
+                
+        '400':
+          description: 잘못된 요청
+          schema:
+            type: object
+            properties:
+              status:
+                type: integer
+                example: 400
+              isSuccess:
+                type: boolean
+                example: false
+              code:
+                type: integer
+                example: COMMON001 
+              message:
+                type: string
+                example: 잘못된 요청입니다
+
+        '500':
+          description: 서버 에러
+          schema:
+            type: object
+            properties:
+              status:
+                type: integer
+                example: 500
+              isSuccess:
+                type: boolean
+                example: false
+              code:
+                type: integer
+                example: COMMON000
+              message:
+                type: string
+                example: 서버 에러, 관리자에게 문의 바랍니다.\
   /fitple/recommend/getbodyinfo/{uuid}:
     get:
       tags:
